[FIX] documentation. [UPDATE] param docs. clean-up. license info. switch to codecov. [TESTS] use deepequal rather than closeto.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "distributions-uniform-pdf",
   "version": "0.0.0",
-  "description": "Uniform  distribution probability density function (PDF)",
+  "description": "Uniform distribution probability density function (PDF).",
   "author": {
     "name": "Philipp Burckhardt",
     "email": "pburckhardt@outlook.com"
@@ -10,12 +10,16 @@
     {
       "name": "Philipp Burckhardt",
       "email": "pburckhardt@outlook.com"
+    },
+    {
+      "name": "Athan Reines",
+      "email": "kgryte@gmail.com"
     }
   ],
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "test-cov": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./reports/coverage -- -R spec",
-    "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./reports/coveralls/coverage --report lcovonly -- -R spec && cat ./reports/coveralls/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./reports/coveralls"
+    "test": "mocha",
+    "test-cov": "istanbul cover ./node_modules/.bin/_mocha --dir ./reports/coverage -- -R spec",
+    "codecov": "istanbul cover ./node_modules/.bin/_mocha --dir ./reports/codecov/coverage --report lcovonly -- -R spec && cat ./reports/codecov/coverage/lcov.info | codecov && rm -rf ./reports/codecov"
   },
   "main": "./lib",
   "repository": {
@@ -28,7 +32,11 @@
     "probability",
     "statistics",
     "stats",
-    "pdf"
+    "pdf",
+    "uniform",
+    "continuous",
+    "symmetric",
+    "univariate"
   ],
   "bugs": {
     "url": "https://github.com/compute-io/uniform-pdf/issues"
@@ -42,21 +50,19 @@
     "validate.io-boolean-primitive": "^1.0.0",
     "validate.io-function": "^1.0.2",
     "validate.io-matrix-like": "^1.0.2",
-    "validate.io-nan": "^1.0.3",
-    "validate.io-nonnegative-integer": "^1.0.0",
     "validate.io-number-primitive": "^1.0.0",
     "validate.io-object": "^1.0.4",
-    "validate.io-positive-primitive": "^1.0.0",
     "validate.io-string-primitive": "^1.0.0",
     "validate.io-typed-array-like": "^1.0.0"
   },
   "devDependencies": {
     "chai": "3.x.x",
-    "mocha": "2.x.x",
-    "coveralls": "^2.11.1",
+    "codecov.io": "^0.1.5",
     "istanbul": "^0.3.0",
     "jshint": "2.x.x",
-    "jshint-stylish": "2.x.x"
+    "jshint-stylish": "2.x.x",
+    "mocha": "2.x.x",
+    "validate.io-nan": "^1.0.3"
   },
   "license": "MIT"
 }
